--- a/profile1.html
+++ b/profile1.html
@@ -112,9 +112,9 @@
         <p class="main">yan</p>
         <h1 class="sub">happy</h1>
         <a target="_blank" href="https://blog.naver.com/bearever">its</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">me</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">happy</a>
-        <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">today</a>
+        <a target="_blank" href="https://www.naver.com">me</a>
+        <a target="_blank" href="https://www.naver.com">happy</a>
+        <a target="_blank" href="https://www.naver.com">today</a>
         
     
     </div>
