--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="its me">
     <meta property="og:description" content="신입지원자 이력서">
     <meta property="og:image" content="me">
-    <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
+   
     <title> profile</title>
 
     <style>
@@ -112,9 +112,9 @@
         <p class="main">yan</p>
         <h1 class="sub">happy</h1>
         <a target="_blank" href="https://blog.naver.com/bearever">its</a>
-        <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">me</a>
-        <a target="_blank" href="https://chang.spartacodingclub.kr/">happy</a>
-        <a target="_blank" href="https://ddingdong.spartacodingclub.kr/">today</a>
+        <a target="_blank"" >me</a>
+        <a target="_blank"">happy</a>
+        <a target="_blank"">today</a>
         
     
     </div>
