--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="its me">
     <meta property="og:description" content="신입지원자 이력서">
-    <meta property="og:image" content="./Group 3.jpg">
+    <meta property="og:image" content="face.png">
    
     <title> profile</title>
 
@@ -29,7 +29,7 @@
 
              border: 2px solid white;
 
-            background-image: url("Group 3.jpg");
+            background-image: url("face.png");
             background-position: center;
             background-size: cover;
                 
