--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <p class="main">yan</p>
         <h1 class="sub">신입지원자 이하얀입니다</h1>
         
-        <a target="_blank"" >이력서</a>
+        <a target="_blank" href= "얀이력서.pdf" >이력서</a>
         <a target="_blank"">포트폴리오</a>
         <a target="_blank" href="https://blog.naver.com/bearever">blog</a>
         <a target="_blank""> 감사합니다 </a>
