--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="its me">
+    <meta property="og:title" content="이하얀">
     <meta property="og:description" content="신입지원자 이력서">
     <meta property="og:image" content="face.png">
    
@@ -109,7 +109,7 @@
 
 
         </div>
-        <p class="main">yan</p>
+        <p class="main">LEE HA YAN</p>
         <h1 class="sub">신입지원자 이하얀입니다</h1>
         
         <a target="_blank" href= "얀이력서.pdf" >이력서</a>
