--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             background-image: url("face.png");
             background-position: center;
-            background-size: cover;
+            background-size: contain;
                 
                 }
 
